--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.3",
-    "multer": "^2.0.2",
+    "mime-types": "^3.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.16.1",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.3",
